/*
 * Copyright  2014-2019 jonathan.zhan.chang@gmail.com(Jonathan)
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

package com.workfocus.dp.behavior.strategy;

/**
 * 接口实现类2
 *
 * @author Jonathan
 * @version 1.0.0
 * @date 2019/6/12 12:01
 * @since 1.0.0+
 */
public class StrategyImp2 implements Strategy {

    @Override
    public void method() {
        System.out.println("execute method 2");
    }
}
