@startuml
caption 策略模式
interface Strategy{
    Strategy : method()
}

class Context {
    - Strategy strategy
    + setStrategy(Strategy strategy)
    + execMethod()
}

note as N1
public void execMethod() {
    strategy.method();
}
end note
Context .. N1

class StrategyImp1 {
    method()
}

class StrategyImp2 {
    method()
}
Strategy -left--o Context
StrategyImp2 -up..|> Strategy
StrategyImp1 -up..|> Strategy

@enduml